-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P5
-
Affects Version/s: 8, 11, 14
-
Component/s: hotspot
-
b20
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8267097 | 13.0.8 | Yuri Nesterenko | P5 | Resolved | Fixed | b02 |
| JDK-8304762 | 11.0.20-oracle | Fairoz Matte | P5 | Resolved | Fixed | b01 |
| JDK-8267156 | 11.0.12 | Matthias Baesken | P5 | Resolved | Fixed | b03 |
I tried to build OpenJDK on Fedora 30 x64 with GCC 9.2.1, but it was failed as below:
macroAssembler_x86.hpp
```
In file included from /home/ysuenaga/OpenJDK/jdk/src/hotspot/share/utilities/globalDefinitions.hpp:29,
from /home/ysuenaga/OpenJDK/jdk/src/hotspot/share/memory/allocation.hpp:28,
from /home/ysuenaga/OpenJDK/jdk/src/hotspot/share/classfile/classLoaderData.hpp:28,
from /home/ysuenaga/OpenJDK/jdk/src/hotspot/share/precompiled/precompiled.hpp:34:
In member function 'void MacroAssembler::pd_patch_instruction(address, address, const char*, int)',
inlined from 'void MacroAssembler::pd_patch_instruction(address, address, const char*, int)' at /home/ysuenaga/OpenJDK/jdk/src/hotspot/cpu/x86/macroAssembler_x86.hpp:103:8,
inlined from 'void Label::patch_instructions(MacroAssembler*)' at /home/ysuenaga/OpenJDK/jdk/src/hotspot/share/asm/assembler.cpp:217:31:
/home/ysuenaga/OpenJDK/jdk/src/hotspot/share/utilities/debug.hpp:101:20: warning: '%s' directive argument is null [-Wformat-overflow=]
101 | report_vm_error(__FILE__, __LINE__, "guarantee(" #p ") failed", __VA_ARGS__); \
| ~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/home/ysuenaga/OpenJDK/jdk/src/hotspot/cpu/x86/macroAssembler_x86.hpp:117:7: note: in expansion of macro 'guarantee'
117 | guarantee(this->is8bit(imm8), "Short forward jump exceeds 8-bit offset at %s:%d", file, line);
| ^~~~~~~~~
In file included from /home/ysuenaga/OpenJDK/jdk/src/hotspot/share/asm/macroAssembler.hpp:31,
from /home/ysuenaga/OpenJDK/jdk/src/hotspot/share/asm/assembler.cpp:27:
/home/ysuenaga/OpenJDK/jdk/src/hotspot/cpu/x86/macroAssembler_x86.hpp: In member function 'void Label::patch_instructions(MacroAssembler*)':
/home/ysuenaga/OpenJDK/jdk/src/hotspot/cpu/x86/macroAssembler_x86.hpp:117:81: note: format string is defined here
117 | guarantee(this->is8bit(imm8), "Short forward jump exceeds 8-bit offset at %s:%d", file, line);
```
diagnosticArgument.cpp:
```
In member function 'void DCmdArgument<ArgType>::parse_value(const char*, size_t, Thread*) [with ArgType = bool]',
inlined from 'void DCmdArgument<ArgType>::init_value(Thread*) [with ArgType = bool]' at /home/ysuenaga/OpenJDK/jdk/src/hotspot/share/services/diagnosticArgument.cpp:164:22:
/home/ysuenaga/OpenJDK/jdk/src/hotspot/share/services/diagnosticArgument.cpp:154:14: warning: 'char* strncpy(char*, const char*, size_t)' output truncated before terminating nul copying as many bytes from a string as its length [-Wstringop-truncation]
154 | strncpy(buf, str, len);
| ~~~~~~~^~~~~~~~~~~~~~~
/home/ysuenaga/OpenJDK/jdk/src/hotspot/share/services/diagnosticArgument.cpp: In member function 'void DCmdArgument<ArgType>::init_value(Thread*) [with ArgType = bool]':
/home/ysuenaga/OpenJDK/jdk/src/hotspot/share/services/diagnosticArgument.cpp:164:22: note: length computed here
164 | this->parse_value(_default_string, strlen(_default_string), THREAD);
```
macroAssembler_x86.hpp
```
In file included from /home/ysuenaga/OpenJDK/jdk/src/hotspot/share/utilities/globalDefinitions.hpp:29,
from /home/ysuenaga/OpenJDK/jdk/src/hotspot/share/memory/allocation.hpp:28,
from /home/ysuenaga/OpenJDK/jdk/src/hotspot/share/classfile/classLoaderData.hpp:28,
from /home/ysuenaga/OpenJDK/jdk/src/hotspot/share/precompiled/precompiled.hpp:34:
In member function 'void MacroAssembler::pd_patch_instruction(address, address, const char*, int)',
inlined from 'void MacroAssembler::pd_patch_instruction(address, address, const char*, int)' at /home/ysuenaga/OpenJDK/jdk/src/hotspot/cpu/x86/macroAssembler_x86.hpp:103:8,
inlined from 'void Label::patch_instructions(MacroAssembler*)' at /home/ysuenaga/OpenJDK/jdk/src/hotspot/share/asm/assembler.cpp:217:31:
/home/ysuenaga/OpenJDK/jdk/src/hotspot/share/utilities/debug.hpp:101:20: warning: '%s' directive argument is null [-Wformat-overflow=]
101 | report_vm_error(__FILE__, __LINE__, "guarantee(" #p ") failed", __VA_ARGS__); \
| ~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/home/ysuenaga/OpenJDK/jdk/src/hotspot/cpu/x86/macroAssembler_x86.hpp:117:7: note: in expansion of macro 'guarantee'
117 | guarantee(this->is8bit(imm8), "Short forward jump exceeds 8-bit offset at %s:%d", file, line);
| ^~~~~~~~~
In file included from /home/ysuenaga/OpenJDK/jdk/src/hotspot/share/asm/macroAssembler.hpp:31,
from /home/ysuenaga/OpenJDK/jdk/src/hotspot/share/asm/assembler.cpp:27:
/home/ysuenaga/OpenJDK/jdk/src/hotspot/cpu/x86/macroAssembler_x86.hpp: In member function 'void Label::patch_instructions(MacroAssembler*)':
/home/ysuenaga/OpenJDK/jdk/src/hotspot/cpu/x86/macroAssembler_x86.hpp:117:81: note: format string is defined here
117 | guarantee(this->is8bit(imm8), "Short forward jump exceeds 8-bit offset at %s:%d", file, line);
```
diagnosticArgument.cpp:
```
In member function 'void DCmdArgument<ArgType>::parse_value(const char*, size_t, Thread*) [with ArgType = bool]',
inlined from 'void DCmdArgument<ArgType>::init_value(Thread*) [with ArgType = bool]' at /home/ysuenaga/OpenJDK/jdk/src/hotspot/share/services/diagnosticArgument.cpp:164:22:
/home/ysuenaga/OpenJDK/jdk/src/hotspot/share/services/diagnosticArgument.cpp:154:14: warning: 'char* strncpy(char*, const char*, size_t)' output truncated before terminating nul copying as many bytes from a string as its length [-Wstringop-truncation]
154 | strncpy(buf, str, len);
| ~~~~~~~^~~~~~~~~~~~~~~
/home/ysuenaga/OpenJDK/jdk/src/hotspot/share/services/diagnosticArgument.cpp: In member function 'void DCmdArgument<ArgType>::init_value(Thread*) [with ArgType = bool]':
/home/ysuenaga/OpenJDK/jdk/src/hotspot/share/services/diagnosticArgument.cpp:164:22: note: length computed here
164 | this->parse_value(_default_string, strlen(_default_string), THREAD);
```
- backported by
-
JDK-8267097 HotSpot build failed with GCC 9.2.1
-
- Resolved
-
-
JDK-8267156 HotSpot build failed with GCC 9.2.1
-
- Resolved
-
-
JDK-8304762 HotSpot build failed with GCC 9.2.1
-
- Resolved
-
- relates to
-
JDK-8209594 guarantee(this->is8bit(imm8)) failed: Short forward jump exceeds 8-bit offset
-
- Closed
-
-
JDK-8232187 Add os::strncpy_s
-
- Open
-
(2 links to)