8232084: HotSpot build failed with GCC 9.2.1

Reviewed-by: sspitsyn, cjplummer, dholmes, iklam